# wichteln

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  modal_app.py  modal_deploy.py  pyproject.toml  wichteln.db
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx
frontend/src/pages/: CreateGroup.tsx  Home.tsx  Reveal.tsx
frontend/src/styles/: global.css
tests/: test_api.py  test_matching_algorithm.py
wichteln/: api_routes.py  app.py  database.py  email_service.py  main.py  models.py  routes.py  schemas.py  utils.py  word_bank.py
